[gd_scene load_steps=4 format=3 uid="uid://cssbmiaa7x1qw"]

[ext_resource type="Script" path="res://Scripts/Item.gd" id="1_4vl18"]
[ext_resource type="Texture2D" uid="uid://dimx4mux13xy7" path="res://Sprites/UI/sausage.png" id="2_6xojm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5j5g3"]
size = Vector2(16, 16)

[node name="Item" type="Area2D"]
disable_mode = 1
script = ExtResource("1_4vl18")

[node name="TextureRect" type="TextureRect" parent="."]
texture = ExtResource("2_6xojm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_5j5g3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
